Login e cadstro, pesquisando por serviços mais próximos

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -111,7 +111,7 @@
                         <label class="text-sm font-medium text-color-bg" for="input-location">Nome do serviço</label>
                         <input
                             class="placeholder-color-gray p-4 outline-2 outline-color-primary bg-white w-full text-color-bg h-10 rounded-lg text-sm font-medium border border-color-gray-light-2"
-                            id="input-service-name" nmae="serviceName" type="text"
+                            id="input-service-name" name="serviceName" type="text"
                             placeholder="Digite o nome do serviço">
                     </div>
                     <div class="flex flex-col gap-0.5">
