- fazendo filtros de serviços pelo mongodb, fazendo edição de serviço, edição de localização, favoritar serviço, adicionando categorias

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,3 +18,8 @@ body {
 
   background-color: var(--color-gray-light);
 }
+
+.favorited * {
+  fill: var(--color-primary);
+  stroke: var(--color-primary);
+}
