--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -67,7 +67,7 @@
                     </div>
                 </div>
 
-                <a href="/"
+                <a href="/logout"
                     class="mt-4 border border-color-gray-light-2 flex justify-center items-center rounded-lg px-4 h-12 hover:bg-color-light-gray bg-white [&_*]:stroke-color-bg">
                     <p class="text-red-700 text-sm font-semibold">Sair</p>
                 </a>
@@ -103,7 +103,12 @@
                         </div>
                     </div>
 
-                    <a href="/"
+                    <a href="/service-edit"
+                        class="mt-4 border border-color-gray-light-2 flex justify-center items-center rounded-lg px-4 h-12 hover:bg-color-light-gray bg-white [&_*]:stroke-color-bg">
+                        <p class="text-color-primary text-sm font-semibold">Editar Serviço</p>
+                    </a>
+
+                    <a href="/logout"
                         class="mt-4 border border-color-gray-light-2 flex justify-center items-center rounded-lg px-4 h-12 hover:bg-color-light-gray bg-white [&_*]:stroke-color-bg">
                         <p class="text-red-700 text-sm font-semibold">Sair</p>
                     </a>
