--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,4 +1,4 @@
-<aside class="w-80 bg-color-gray-light px-10 py-8 gap-2 flex flex-col">
+<aside class="w-full md:w-80 bg-color-gray-light px-10 py-8 gap-2 flex flex-col">
     <a link="/" id="buttonSidebar" href="/<%= getSearchParams() %>"
         class="border border-color-gray-light-2 flex items-center rounded-lg px-4 h-12 hover:bg-color-light-gray bg-white [&_*]:stroke-color-bg [&_*]:text-color-bg gap-2">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
