--- a/views/service-edit.ejs
+++ b/views/service-edit.ejs
@@ -84,8 +84,7 @@
                         value="<%= user.service.contact %>">
                 </div>
                 
-                <!-- Location Fields -->
-                <div class="flex flex-col gap-0.5 mt-4">
+                <div class="flex flex-col gap-0.5">
                     <label class="text-sm font-medium text-color-bg">Localização do serviço</label>
                     <div class="flex items-center gap-2">
                         <input
