Alteranto a pesquisa de localização para um raio de 8km

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -53,7 +53,7 @@
             d="M13.2574 17.4936C12.9201 17.8184 12.4693 18 12.0002 18C11.531 18 11.0802 17.8184 10.7429 17.4936C7.6543 14.5008 3.51519 11.1575 5.53371 6.30373C6.6251 3.67932 9.24494 2 12.0002 2C14.7554 2 17.3752 3.67933 18.4666 6.30373C20.4826 11.1514 16.3536 14.5111 13.2574 17.4936Z"
             stroke="#ffffff" stroke-width="1.5"></path>
         </svg>
-        <p class="w-24 md:w-52 truncate">
+        <p class="w-24 md:w-52">
           <%= !user ? "Faça login para localizar" : userLocationStr %>
         </p>
       </a>
