--- a/views/partials/service.ejs
+++ b/views/partials/service.ejs
@@ -20,13 +20,13 @@
 
 
             <section class="flex flex-col gap-0">
-                <h1 class="text-2xl font-bold text-color-text overflow-hidden max-w-[90%] text-ellipsis">
+                <h1 class="text-2xl font-bold text-color-text overflow-hidden max-w-72 text-ellipsis">
                     <%= service.name %>
                 </h1>
                 <p class="text-base font-bold text-color-primary">
                     <%= typeof service.category=="string" ? service.category : service.category.name %>
                 </p>
-                <div class="flex items-center gap-1">
+                <div class="flex items-start gap-1">
                     <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M13.5 13.5C14.4335 13.8183 15 14.2364 15 14.6944C15 15.6916 12.3137 16.5 9 16.5C5.68629 16.5 3 15.6916 3 14.6944C3 14.2364 3.56645 13.8183 4.5 13.5"
@@ -38,7 +38,7 @@
                             d="M9 1.5C12.0441 1.5 14.625 4.07102 14.625 7.19017C14.625 10.359 12.0021 12.5827 9.57938 14.0949C9.40283 14.1965 9.20318 14.25 9 14.25C8.79682 14.25 8.59717 14.1965 8.42062 14.0949C6.00244 12.568 3.375 10.3699 3.375 7.19017C3.375 4.07102 5.9559 1.5 9 1.5Z"
                             stroke="#5E5E65" />
                     </svg>
-                    <p class="text-sm font-medium text-color-gray truncate overflow-hidden text-ellipsis">
+                    <p class="mt-[-1px] text-sm font-medium text-color-gray max-w-72 overflow-hidden text-ellipsis">
                         <%= service.location.city %>, <%= service.location.state %>, <%= service.location.neighborhood
                                     %>,
                                     <%= service.location.street %>
