--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -9,6 +9,7 @@
         <p class="text-white text-sm font-medium">Serviços</p>
     </a>
 
+    <% if (user) { %>
     <a link="/favorites" id="buttonSidebar" href="/favorites<%= getSearchParams() %>"
         class="border border-color-gray-light-2 flex items-center rounded-lg px-4 h-12 hover:bg-color-light-gray bg-white [&_*]:stroke-color-bg [&_*]:text-color-bg gap-2">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -19,6 +20,8 @@
 
         <p class="text-white text-sm font-semibold">Favoritos</p>
     </a>
+    <% } %>
+
 
     <% if (!user) { %>
         <!-- User not logged in -->
