--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,8 @@
           <% } %>
             <!-- SERVICES -->
             <div class="flex flex-wrap flex-col gap-5">
-              <% if (services.length <=0 && user) { %>
+              <% if (services.length <=0 && user || !user && currentPath.includes("/category") && services.length <=0) {
+                %>
                 <p class="items-center justify-start h-24 text-left gap-2 flex font-medium text-base text-gray-500">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="26" height="26" color="#6a7282"
                     fill="none">
@@ -33,9 +34,10 @@
                       stroke="#6a7282" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                   </svg>
                   <%= currentPath.includes("/search") ? 'Nenhum resultado encontrado' : isServicesFavorites===true
-                    ? 'Nenhum serviço favorito' : 'Nenhum serviço encontrado na sua região' %>
+                    ? 'Nenhum serviço favorito' : 'Nenhum serviço encontrado' %>
                 </p>
                 <% } %>
+               
                   <% if (services.length> 0) { %>
                     <h1 class="font-bold text-3xl text-color-bg">
                       <%= currentPath.includes("/category") ? "Serviços de " +
@@ -213,7 +215,6 @@
           const data = await response.json();
 
           if (data.success) {
-            // Fechar o modal e atualizar a página para mostrar a nova avaliação
             closeRatingModal();
             window.location.reload();
           }
